# uniubi_robot_sdk

./: CMakeLists.txt  NOTICE  README.md  THIRD_PARTY_NOTICES.md
cmake/: toolchain-aarch64-linux-gnu.cmake
docs/: runtime_notes.md
examples/: CMakeLists.txt  example_highlevel.cpp  example_lowlevel.cpp  example_media_frames.cpp
include/uniubi/robot_sdk/: MediaBusClient.h  MotionHighLevelClient.h  MotionLowLevelClient.h  MotionSdkProtocol.h  MotionSdkService.h
include/uniubi/robot_sdk/Media/: Define.h  FrameInfo.h  MediaBuffer.h  MediaFrame.h
include/uniubi/robot_sdk/Memory/: Packet.h
include/uniubi/robot_sdk/UBase/: Define.h  Delegate.h
lib/aarch64/: libacl.so.1.1.2302  libattr.so.1.1.2501  libcrypto.so.1.1  libddsc.so.0.10.5  libddscxx.so.0  libddscxx.so.0.10.5  libssl.so.1.1  libz.so.1.2.11
lib/i386/: libacl.so.1.1.2302  libattr.so.1.1.2502  libcrypto.so.1.1  libddsc.so.0.10.5  libddscxx.so.0.10.5  libz.so.1.2.11
lib/x86_64/: libacl.so.1.1.2302  libattr.so.1.1.2502  libcrypto.so.1.1  libddsc.so.0.10.5  libddscxx.so.0.10.5  libz.so.1.2.11
